--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemailer": "^6.9.4",
     "bwip-js": "^2.0.11",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+  "body-parser": "^1.20.2",
+  "pg": "^8.11.5"
   }
 }
