docs: expand .env.example with postgres, mobile and debug vars

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,29 @@
-# Copy to .env and fill in Office365 SMTP credentials
+## Copy to .env and fill in real secrets (never commit .env)
+
+# App
 PORT=3000
+
+# Local SQLite (dev only)
 DB_FILE=partstore.db
+
+# Postgres (prod) - uncomment & fill when using Postgres
+# PGHOST=your-pg-host.postgres.render.com
+# PGPORT=5432
+# PGUSER=your_pg_user
+# PGPASSWORD=your_pg_password
+# PGDATABASE=your_pg_db
+# PGSSLMODE=require
+
+# SMTP / email alerts (Office365 example)
 SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
 SMTP_USER=you@yourdomain.com
 SMTP_PASS=YourPassword
-ALERT_EMAIL=mhe@holship.com
+ALERT_EMAIL=alerts@yourdomain.com
+
+# Mobile login (env mode)
+MOBILE_USER=mobile
+MOBILE_PASS=changeme
+
+# Optional debug flags
+# DEBUG_MOBILE_AUTH=1
