--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "seed": "node seed.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
-    "dotenv": "^16.3.1",
-    "nodemailer": "^6.9.4",
+    "body-parser": "^1.20.2",
     "bwip-js": "^2.0.11",
     "cors": "^2.8.5",
-  "body-parser": "^1.20.2",
-  "pg": "^8.11.5"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.4",
+    "pg": "^8.16.3",
+    "sqlite3": "^5.1.6"
   }
 }
