--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+  "express-session": "^1.17.3",
     "nodemailer": "^6.9.4",
+  "bcryptjs": "^2.4.3",
     "pg": "^8.16.3",
     "sqlite3": "^5.1.6"
   }
