--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemailer": "^6.9.4",
   "bcryptjs": "^2.4.3",
     "pg": "^8.16.3",
-    "sqlite3": "^5.1.6"
+  "sqlite3": "^5.1.6",
+  "ws": "^8.18.0"
   }
 }
