--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "bcryptjs": "^2.4.3",
     "pg": "^8.16.3",
   "sqlite3": "^5.1.6",
-  "ws": "^8.18.0"
+  "ws": "^8.18.0",
+  "multer": "^1.4.5-lts.1",
+  "xlsx": "^0.18.5"
   }
 }
