--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "seed": "node seed.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bwip-js": "^2.0.11",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
   "express-session": "^1.17.3",
-    "nodemailer": "^6.9.4",
-  "bcryptjs": "^2.4.3",
+  "multer": "^2.0.0",
+  "nodemailer": "^7.0.10",
+    
     "pg": "^8.16.3",
-  "sqlite3": "^5.1.6",
-  "ws": "^8.18.0",
-  "multer": "^1.4.5-lts.1",
-  "xlsx": "^0.18.5"
+    "sqlite3": "^5.1.6",
+    "ws": "^8.18.0",
+    "xlsx": "^0.18.5"
   }
 }
