feat(stock): auto-set fixed location on first IN scan when part has none (toggle via AUTO_SET_FIXED_LOC_ON_IN); docs in .env.example

--- a/.env.example
+++ b/.env.example
@@ -22,8 +22,14 @@ SMTP_PASS=YourPassword
 ALERT_EMAIL=alerts@yourdomain.com
 
 # Mobile login (env mode)
-MOBILE_USER=mobile
-MOBILE_PASS=changeme
+MOBILE_USER=test
+MOBILE_PASS=test
+
 
 # Optional debug flags
 # DEBUG_MOBILE_AUTH=1
+
+# Auto set fixed location on first IN scan
+# When a part without fixed location is scanned IN with a location, set that location as default.
+# 1 = enabled (default), 0 = disabled
+AUTO_SET_FIXED_LOC_ON_IN=1
